# user-service

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yaml
alembic/: env.py
alembic/versions/: 3b296fe63c35_initial_create_user_table.py
k8s/: deployment.yaml  postgres.yaml  service.yaml
src/user_service/: main.py
src/user_service/api/v1/: auth.py  users.py
src/user_service/core/: config.py  database.py  dependencies.py  security.py
src/user_service/crud/: user.py
src/user_service/db/: base.py  init_db.py  session.py
src/user_service/db/migrations/: env.py
src/user_service/db/migrations/versions/: 835a7b1bd6a6_create_user_table.py  9c22c933a27d_creating_table_users_user_profiles_roles.py  cddf44c82c4d_create_user_table_users_user_profiles_.py
src/user_service/models/: __init__.py  roles.py  user.py  user_profile.py
src/user_service/repositories/: user_repository.py
src/user_service/schemas/: user.py
src/user_service/services/: user_service.py
tests/: test_user.py
